Fix overflow for long tweets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,10 @@
   width: 100%;
 }
 
+.words {
+  overflow-wrap: anywhere;
+}
+
 .notification:not(:last-child) {
   margin-bottom: 0;
 }
